--- a/src/sass/_uiparts.sass
+++ b/src/sass/_uiparts.sass
@@ -16,9 +16,16 @@
   text-align: left
   user-select: none
   +trans
-  &:after
-    @extend %icon
-    content: $icon-chevron-down
+  //&:after
+  //  @extend %icon
+  //  content: $icon-chevron-down
+  //  position: absolute
+  //  top: 50%
+  //  right: 12px
+  //  margin-top: -0.5em
+  //  color: $color-border
+  //  font-size: 6px
+  .icon
     position: absolute
     top: 50%
     right: 12px
@@ -28,7 +35,7 @@
   .is-open &
     border-color: $color-blue
     box-shadow: 0px 0px 4px 0px rgba(73, 143, 225, 0.50)
-    &:after
+    .icon
       color: $color-blue
 
 
@@ -128,3 +135,21 @@
     color: $color-blue
     cursor: default
 
+.btn-icon
+  display: inline-block
+  margin-top: 40px
+  background: none
+  font-size: 12px
+  color: rgba($color-text-main, 0.5)
+  text-align: center
+  +trans(color)
+  .icon
+    display: block
+    margin: 0 auto 15px
+    font-size: 58px
+  &:hover,
+  &:focus
+    color: $color-text-main
+    .icon
+      +trans(fill)
+      fill: $color-blue
