--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,7 +2,8 @@
 @import vars
 @import helpers/all
 @import fonts
-@import generated/iconfont
+//@import generated/iconfont
+@import generated/sprite-svg
 @import common
 @import nouislider-theme
 @import uiparts
