--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -1,3 +1,4 @@
+{% import 'layouts/_mixins.html' as mixins %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,7 +14,6 @@
     <!-- END content -->
 
     <!-- BEGIN scripts -->
-    {# <script type="text/javascript" src="js/vendor.js"></script> #}
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="lib/nouislider/distribute/nouislider.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
