--- a/src/templates/partials/_attendance.html
+++ b/src/templates/partials/_attendance.html
@@ -1,27 +1,37 @@
 <!-- BEGIN attendance -->
 <div class="attendance">
-  <div class="l">
-    <h2 class="attendance__title">What is attendance of your organization?</h2>
-    <p>
-      Please input correct information as all important statistics
-      & benchmarks will not be shown properly in your CMS.
-    </p>
-    <div class="attendance__value">100-150</div>
-    <div class="attendance__slider slider">
-      <div class="slider-track"></div>
-      <ul class="slider-points">
-        <li class="slider-point">0-50</li>
-        <li class="slider-point">50-100</li>
-        <li class="slider-point">100-250</li>
-        <li class="slider-point">250-500</li>
-        <li class="slider-point">500-1,000</li>
-        <li class="slider-point">1,000-3,000</li>
-        <li class="slider-point">3,000-5,000</li>
-        <li class="slider-point">5,000-10,000</li>
-        <li class="slider-point">10,000-25,000</li>
-        <li class="slider-point">25,000+</li>
-      </ul>
+    <div class="l">
+      <h2 class="attendance__title">What is attendance of your organization?</h2>
+      <p>
+        Please input correct information as all important statistics
+        & benchmarks will not be shown properly in your CMS.
+      </p>
+      <div class="attendance__value">100-150</div>
     </div>
-  </div>
+    <div class="attendance__footer">
+      <div class="l">
+        <div class="attendance__slider">
+          <div class="slider"></div>
+          <ul class="slider-points">
+            <li class="slider-point">0-50</li>
+            <li class="slider-point">50-100</li>
+            <li class="slider-point">100-250</li>
+            <li class="slider-point">250-500</li>
+            <li class="slider-point">500-1,000</li>
+            <li class="slider-point">1,000-3,000</li>
+            <li class="slider-point">3,000-5,000</li>
+            <li class="slider-point">5,000-10,000</li>
+            <li class="slider-point">10,000-25,000</li>
+            <li class="slider-point">25,000+</li>
+          </ul>
+          <div class="slider-tooltip">
+            {{ mixins.icon('man') }}
+            {{ mixins.icon('people-2') }}
+            {{ mixins.icon('people-3') }}
+            {{ mixins.icon('people-5') }}
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
 <!-- END attendance -->
