--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -2,3 +2,8 @@ $layout-width: 900
 $color-text-main: #546475
 $color-border: #979797
 $color-blue: #4A90E2
+$color-bg-main: #FBFBFB
+$color-tile-dark: #EAEEF3
+$color-tile-dark-border: rgba(white, 0.33)
+$color-text-green: #31B971
+$color-text-important: #D0021B
