--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -18,10 +18,6 @@
   bottom: 0
   right: 20px
 
-.type-select
-  width: 250px
-  margin: 30px auto 40px
-
 .attendance
   padding: 37px 0 0
   background: #529EF7
@@ -56,3 +52,14 @@
   margin: 0 60px
   position: relative
   padding-bottom: 30px
+
+.check-list
+  white-space: nowrap
+  &:not(:last-child)
+    padding-right: 15px
+
+.check-list__item
+  &:not(:first-child)
+    margin-top: 15px
+  > *
+    vertical-align: middle
