--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,38 @@
 ---
 title: Pricing Page
+checkboxes:
+  -
+    - Events
+    - Sermons
+    - Blog
+    - News
+  -
+    - Bible
+    - About Us
+    - Contact/Follow Us
+    - Ideas
+  -
+    - Push Notifications (Rich & Simple)
+    - Interactive Sermon Notes
+    - Bible (native functionality)
+    - Ministries
+  -
+    - Photo Gallery
+    - Staff
+    - Contact Us
+    - Service Times & Locations
+    - Live Streaming
+
+checkboxes2:
+  -
+    - Reading Plans
+    - Devotions
+  -
+    - Interactive Prayer Wall
+    - Photo Gallery Website Widget
+  -
+    - Groups
+    - Website Push Notifications
 ---
 {% extends "layouts/_layout.html" %}
 
@@ -9,8 +42,8 @@ title: Pricing Page
   <header class="header l">
     <img class="header__pic" src="img/illustartion.svg" alt="illustartion">
     <h1 class="header__title title">Price Configurator</h1>
-    <div class="header__aside-btn drop">
-      <button class="btn-round" data-trigger="drop">Already have an app?</button>
+    <div class="header__aside-btn dropdown">
+      <button class="btn-round" data-toggle="dropdown">Already have an app?</button>
       <div class="tooltip tooltip_lg">
         If you already have an app and wish to upgrade to our solution
         as most of our clients did, as a welcome gift, we will create stunning
@@ -21,8 +54,8 @@ title: Pricing Page
   </header>
   <!-- END header -->
 
-  <div class="type-select drop">
-    <button class="select-trigger" data-trigger="drop">
+  <div class="type-select dropdown">
+    <button class="select-trigger" data-toggle="dropdown">
       <span>Faith-Based</span>
       {{ mixins.icon('chevron-down') }}
     </button>
@@ -46,4 +79,228 @@ title: Pricing Page
     </button>
   </div>
 
+  <div class="l">
+    <!-- BEGIN tile -->
+    <div class="tile">
+      <div class="tile__head">
+        <h2 class="title">Do you want to publish app on your Developer Certificate or ours?</h2>
+        <div class="hint">{{ mixins.icon('hint') }}</div>
+      </div>
+      <div class="l-row">
+        <div class="l-cell check-group align-left">
+          {{ mixins.radio('Your Developer Certificate (<strong>$99 one-time fee</strong>)', null, 'name=publish checked') }}
+          <div class="hint">{{ mixins.icon('hint') }}</div>
+        </div>
+        <div class="l-cell check-group align-left">
+          {{ mixins.radio('Our Developer Certificate (<strong>no cost</strong>)', null, 'name=publish') }}
+        </div>
+      </div>
+    </div>
+    <!-- END tile -->
+
+    <!-- BEGIN tile -->
+    <div class="tile-group">
+      <div class="tile">
+        <div class="tile__head">
+          <h2 class="title">App Design: App Icon + Splash Screen</h2>
+        </div>
+
+        <div class="l-row">
+          <div class="l-cell check-group">
+            {{ mixins.radio(null, 'radio_simple', 'name=appicon checked') }}
+            <p>We will create custom design for you</p>
+            <p><strong>$250 One-time fee</strong></p>
+            <p><small class="text-important">Free – Limited Time Offer</small></p>
+          </div>
+          <div class="l-cell check-group">
+            {{ mixins.radio(null, 'radio_simple', 'name=appicon') }}
+            <p>Use our template-based designs</p>
+            <p><strong>Free</strong></p>
+          </div>
+          <div class="l-cell check-group">
+            {{ mixins.radio(null, 'radio_simple', 'name=appicon') }}
+            <p>Your Designer or one of our Partners will&nbsp;create design for your app</p>
+            <p><small>We will provide specification</small></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="tile-panel">
+        <div class="l-row">
+          <div class="l-cell check-group">
+            {{ mixins.radio(null, 'radio_simple', 'name=appicon_extend checked') }}
+            <p>
+              Standard App Design Layouts
+              <button class="demo-btn">{{ mixins.icon('demo') }}</button>
+            </p>
+            <p><strong>Included</strong></p>
+          </div>
+          <div class="l-cell check-group">
+            {{ mixins.radio(null, 'radio_simple', 'name=appicon_extend') }}
+            <p>
+              Premium App Design Layouts
+              <button class="demo-btn">{{ mixins.icon('demo') }}</button>
+            </p>
+            <p><strong>$99 One-time fee</strong></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- END tile -->
+
+    <!-- BEGIN tile -->
+    <div class="tile tile_dark tile_with-pic">
+      <div class="tile__head">
+        <h2 class="title">Best-practices Fundraising Solution</h2>
+        <div class="hint">{{ mixins.icon('hint') }}</div>
+      </div>
+      <div class="l-row">
+        <div class="l-cell check-group">
+          <p class="check-group__title">Full Package</p>
+          {{ mixins.radio(null, 'radio_simple', 'name=fundraising') }}
+          <p>Only 1.25% of processed donations</p>
+          <p><strong class="text-green">Free</strong></p>
+          <p><a href="#"><small>Read More</small></a></p>
+        </div>
+
+        <div class="l-cell check-group">
+          <p class="check-group__title">Full Package</p>
+          {{ mixins.radio(null, 'radio_simple', 'name=fundraising') }}
+          <p>Integrated with your merchant provider</p>
+          <p><strong>$50/month</strong></p>
+        </div>
+
+        <div class="l-cell check-group">
+          <p class="check-group__title">Mobile Giving Only</p>
+          {{ mixins.radio(null, 'radio_simple', 'name=fundraising') }}
+          <p>Integrated with your merchant provider</p>
+          <p><strong>$25/month</strong></p>
+        </div>
+
+        <div class="l-cell check-group">
+          <p class="check-group__title">Website Giving Only</p>
+          {{ mixins.radio(null, 'radio_simple', 'name=fundraising checked') }}
+          <p>Integrated with your merchant provider</p>
+          <p><strong>$25/month</strong></p>
+        </div>
+      </div>
+    </div>
+    <!-- END tile -->
+
+    <!-- BEGIN tile -->
+    <div class="tile">
+      <div class="tile__head">
+        <h2 class="title">Modules that are included</h2>
+        <small class="tile__small-text">
+          Simply uncheck unwanted modules (you’ll be able to add them later as well).
+          You will be able to rename modules as you want.
+        </small>
+        {{ mixins.checkbox('Select All', 'tile__check-all') }}
+      </div>
+      <div class="tile__body">
+        <div class="l-multicolumn">
+          {% for col in checkboxes %}
+            <ul class="l-col check-list">
+            {% for check in col %}
+              <li class="check-list__item">
+                {{ mixins.checkbox(check) }}
+              </li>
+            {% endfor %}
+            </ul>
+          {% endfor %}
+        </div>
+      </div>
+      <div class="tile__footer">
+        <small class="tile__small-text footnote">
+          If you can’t find a module that you want, you can simply use “Links” module
+          thank you can link to any web page by simply adding icon and URL. You can get
+          as many “Links” modules as you want.
+        </small>
+      </div>
+    </div>
+    <!-- END tile -->
+
+    <!-- BEGIN tile -->
+    <div class="tile">
+      <div class="tile__head">
+        <h2 class="title">Additional Modules</h2>
+        {{ mixins.checkbox('Select All', 'tile__check-all') }}
+      </div>
+      <div class="tile__body">
+        <div class="l-multicolumn">
+          {% for col in checkboxes2 %}
+            <ul class="l-col check-list">
+              {% for check in col %}
+                <li class="check-list__item">
+                  {{ mixins.checkbox(check) }}
+                </li>
+              {% endfor %}
+            </ul>
+          {% endfor %}
+          <ul class="l-col check-list">
+            <li class="check-list__item">
+              {{ mixins.checkbox('Links') }}
+              <div class="hint">{{ mixins.icon('hint') }}</div>
+              <div class="amount-select dropdown">
+                <button class="select-trigger select-trigger_simple" data-toggle="dropdown">
+                  <span>1</span> {{ mixins.icon('chevron-down') }}
+                </button>
+              </div>
+            </li>
+            <li class="check-list__item">
+              {{ mixins.checkbox('A Module Clone') }}
+              <div class="hint">{{ mixins.icon('hint') }}</div>
+              <div class="amount-select dropdown">
+                <button class="select-trigger select-trigger_simple" data-toggle="dropdown">
+                  <span>1</span> {{ mixins.icon('chevron-down') }}
+                </button>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- END tile -->
+
+    <!-- BEGIN tile -->
+    <div class="tile">
+      <div class="tile__head">
+        <h2>Additional Options</h2>
+      </div>
+      <div class="l-row">
+        <div class="l-cell check-group">
+          {{ mixins.checkbox(null, 'check_simple', 'checked') }}
+          <p>Marketing Package</p>
+          <p><strong>$50/one-time</strong></p>
+        </div>
+        <div class="l-cell check-group">
+          {{ mixins.checkbox(null, 'check_simple') }}
+          <p>iBeacons Support</p>
+          <p><strong>$20/month</strong></p>
+        </div>
+        <div class="l-cell check-group">
+          {{ mixins.checkbox(null, 'check_simple') }}
+          <p>ChMS Integration</p>
+          <p><strong>$20/month</strong></p>
+        </div>
+      </div>
+    </div>
+    <!-- END tile -->
+
+    <button class="btn-round" data-toggle="modal" data-target="#myModal">Show modal</button>
+  </div>
+
 {% endblock %}
+
+{% block modals %}
+
+  <div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <h1>Blah</h1>
+      </div>
+    </div>
+  </div>
+
+{% endblock %}
+
