--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -8,13 +8,18 @@
   <body>
 
     <!-- BEGIN content -->
-    <div class="out">
-      {% block content %}{% endblock %}
-    </div>
+    {% block content %}{% endblock %}
     <!-- END content -->
+
+    <!-- BEGIN modals -->
+    {% block modals %}{% endblock %}
+    <!-- END modals -->
 
     <!-- BEGIN scripts -->
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="lib/bs-transition.js"></script>
+    <script type="text/javascript" src="lib/bs-modal.js"></script>
+    <script type="text/javascript" src="lib/bs-dropdown.js"></script>
     <script type="text/javascript" src="lib/nouislider/distribute/nouislider.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <!-- END scripts -->
