--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -4,9 +4,11 @@
 @import fonts
 @import generated/sprite-svg
 @import common
+@import partials/keyframes
 @import partials/nouislider-theme
 @import partials/uiparts
 @import partials/fields
 @import partials/main
 @import partials/modal
+@import partials/sidebar
 @import helpers
