--- a/src/sass/partials/_main.sass
+++ b/src/sass/partials/_main.sass
@@ -63,3 +63,14 @@
     margin-top: 15px
   > *
     vertical-align: middle
+
+.callback-form
+  text-align: center
+  font-size: 18px
+  .field
+    width: 100%
+    max-width: 300px
+    margin-left: auto
+    margin-right: auto
+  .title
+    margin-bottom: 13px
