--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="lib/jquery/dist/jquery.js" defer></script>
     <script type="text/javascript" src="lib/bootstrap/js/transition.js" defer></script>
     <script type="text/javascript" src="lib/bootstrap/js/modal.js" defer></script>
+    <script type="text/javascript" src="lib/bootstrap/js/tab.js" defer></script>
     <script type="text/javascript" src="lib/bootstrap/js/dropdown.js" defer></script>
     <script type="text/javascript" src="lib/nouislider/distribute/nouislider.js" defer></script>
     <script type="text/javascript" src="js/app.js" defer></script>
