--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -8,5 +8,7 @@ $color-tile-dark-border: rgba(white, 0.33)
 $color-text-green: #31B971
 $color-text-important: #D0021B
 
-$color-field-green: #37CF7F
+$color-green: #37CF7F
 $color-field-red: #FF001F
+
+$color-sidebar-bg: #F0F1F2
