--- a/src/sass/helpers/_helpers.sass
+++ b/src/sass/helpers/_helpers.sass
@@ -31,3 +31,10 @@
 =xs
   +r(599)
     @content
+
+=hide-input-arrows
+  -moz-appearance: textfield
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button
+    appearance: none
+    margin: 0
