--- a/src/sass/partials/_uiparts.sass
+++ b/src/sass/partials/_uiparts.sass
@@ -2,6 +2,8 @@
   +f(sb, 24, 26)
   &_sm
     font-size: 17px
+  &_lg
+    +f(b, 32, 34)
 
 .select-trigger
   display: block
@@ -142,6 +144,59 @@
     color: $color-blue
     cursor: default
 
+.cta-btn
+  position: relative
+  z-index: 0
+  display: block
+  width: 100%
+  margin: 30px auto 0
+  max-width: 300px
+  text-align: center
+  height: 60px
+  background: $color-green
+  box-shadow: inset 0px -4px 0 0 rgba(0,0,0,0.10)
+  border-radius: 3px
+  +f(b, 20)
+  line-height: 60px
+  text-transform: uppercase
+  color: #FFF
+  overflow: hidden
+  text-decoration: none
+  +trans
+  &:hover
+    background: lighten($color-green, 7%)
+  &:active,
+  &:disabled,
+  &[disabled]
+    box-shadow: none
+    background: darken($color-green, 10%)
+  &:disabled,
+  &[disabled]
+    cursor: default
+
+.processing-anim
+  display: inline-block
+  letter-spacing: 0.1em
+  > span
+    &:first-child
+      animation: dot-1 1.2s linear infinite
+    &:nth-child(2)
+      animation: dot-2 1.2s linear infinite
+    &:nth-child(3)
+      animation: dot-3 1.2s linear infinite
+
+.processing-word-anim
+  letter-spacing: -0.1em
+  perspective: 100px
+  > span
+    display: inline-block
+    animation: letter-anim 1.2s linear infinite
+    animation-fill-mode: both
+    transform-origin: center bottom
+    @for $i from 1 to 11
+      &:nth-child(#{$i})
+        animation-delay: ($i * 0.08)+s
+
 .btn-icon
   display: inline-block
   margin-top: 40px
@@ -153,13 +208,16 @@
   .icon
     display: block
     margin: 0 auto 15px
-    font-size: 58px
+    font-size: 50px
   &:hover,
   &:focus
     color: $color-text-main
     .icon
       +trans(fill)
       fill: $color-blue
+  &_lg
+    .icon
+      font-size: 58px
 
 .hint
   display: inline-block
