affiliate page, upd

--- a/src/sass/partials/_main.sass
+++ b/src/sass/partials/_main.sass
@@ -74,3 +74,58 @@
     margin-right: auto
   .title
     margin-bottom: 13px
+
+.affiliate-form
+  text-align: center
+  .field
+    width: 100%
+    max-width: 450px
+    margin-left: auto
+    margin-right: auto
+
+.form-text-row
+  margin: 30px 0
+  font-size: 14px
+  &:first-child
+    margin-top: 0
+  &:last-child
+    margin-bottom: 0
+  small
+    font-size: 12px
+
+
+.cta-input-group
+  position: relative
+  text-align: center
+  margin: 30px auto 90px
+  .field
+    width: 380px
+    margin: 0 5px 0 0
+    .field__input
+      height: 50px
+      font-size: 20px
+      background: $color-bg-main
+    .field__left-icon,
+    .field__right-icon
+      line-height: 48px
+    &.is-filled.is-focus
+      .field__label
+        background: $color-bg-main
+        transform: translate3d(-5px, -31px, 0)
+  .cta-btn
+    margin: 0
+  > *
+    display: inline-block
+    vertical-align: middle
+
+.cta-input-group__link
+  width: 0
+  white-space: nowrap
+  position: relative
+  left: 15px
+  font-size: 14px
+
+.affiliate
+  max-width: 960px
+  padding: 60px 20px 60px
+  margin: auto
