--- a/src/sass/partials/_modal.sass
+++ b/src/sass/partials/_modal.sass
@@ -52,13 +52,17 @@
   font-size: 15px
   text-align: left
   white-space: normal
+  &_w640
+    max-width: 640px
+  &_w800
+    max-width: 800px
 
 .modal-content
   position: relative
   background: white
   border: 1px solid #979797
   box-sizing: border-box
-  padding: 50px 30px 30px
+  padding: 50px 40px 40px
 
 .modal-close-btn
   position: absolute
