--- a/src/templates/partials/_modal-callback.html
+++ b/src/templates/partials/_modal-callback.html
@@ -4,7 +4,7 @@
       <button class="modal-close-btn" data-dismiss="modal">{{ mixins.icon('close') }}</button>
       <form class="callback-form">
         <h3 class="title title_lg">See Pricing Now or Get Started</h3>
-        <p>No strings attached, open & simple pricing</p>
+        <p class="subtitle">No strings attached, open & simple pricing</p>
 
         <div class="field">
           <input class="field__input" type="email" name="email" id="email">
