--- a/src/templates/pricing-config.html
+++ b/src/templates/pricing-config.html
@@ -160,7 +160,7 @@ checkboxes2:
           {{ mixins.radio(null, 'radio_simple', 'name=fundraising') }}
           <p>Only 1.25% of processed donations</p>
           <p><strong class="text-green">Free</strong></p>
-          <p><a href="#"><small>Read More</small></a></p>
+          <p class="check-group__link"><a href="#"><small>Read More</small></a></p>
         </div>
 
         <div class="l-cell check-group">
@@ -168,6 +168,7 @@ checkboxes2:
           {{ mixins.radio(null, 'radio_simple', 'name=fundraising') }}
           <p>Integrated with your merchant provider</p>
           <p><strong>$50/month</strong></p>
+          <p class="check-group__link"><a href="#"><small>Read More</small></a></p>
         </div>
 
         <div class="l-cell check-group">
@@ -175,6 +176,7 @@ checkboxes2:
           {{ mixins.radio(null, 'radio_simple', 'name=fundraising') }}
           <p>Integrated with your merchant provider</p>
           <p><strong>$25/month</strong></p>
+          <p class="check-group__link"><a href="#"><small>Read More</small></a></p>
         </div>
 
         <div class="l-cell check-group">
@@ -182,6 +184,7 @@ checkboxes2:
           {{ mixins.radio(null, 'radio_simple', 'name=fundraising checked') }}
           <p>Integrated with your merchant provider</p>
           <p><strong>$25/month</strong></p>
+          <p class="check-group__link"><a href="#"><small>Read More</small></a></p>
         </div>
       </div>
     </div>
