--- a/src/templates/affiliate.html
+++ b/src/templates/affiliate.html
@@ -4,13 +4,80 @@ title: Affiliate Page
 {% extends "layouts/_layout.html" %}
 
 {% block content %}
-  <div class="l"><h1>Title</h1></div>
+  <div class="affiliate">
+    <h1 class="title title_lg align-center">Join our Affiliate Program</h1>
+    <p class="subtitle align-center">Earn up to 50% commissions with our affiliate program.</p>
+    <form class="cta-input-group">
+      <div class="field">
+        <input class="field__input" type="email" name="email" id="email">
+        <label for="email" class="field__label">Enter Your Email Address</label>
+        <span class="field__left-icon">{{ mixins.icon('at') }}</span>
+      </div>
+      <button type="submit" class="cta-btn cta-btn_sm">Get started</button>
+      <a class="cta-input-group__link" href="#modal-affiliate" data-toggle="modal">Affiliate Login</a>
+    </form>
+
+    <h2 class="title title_lg align-center">Why partner with us?</h2>
+
+    <div class="card-group">
+      <div class="card">
+        <div class="card__icon"><img src="img/ico-anione.svg"></div>
+        <strong class="card__title">Anyone Can Become an Affiliate</strong>
+        <p class="card__text">
+          Are you a blogger?
+          <br> Are you a web designer/developer?
+          <br> Are you an Internet consultant?
+        </p>
+        <span class="card__link"><a href="#">Read more</a></span>
+      </div>
+
+      <div class="card">
+        <div class="card__icon"><img src="img/ico-integration.svg"></div>
+        <strong class="card__title">Quick and Easy Integration</strong>
+        <p class="card__text">It takes you only 3 click to start selling</p>
+        <span class="card__link"><a href="#">Read more</a></span>
+      </div>
+
+      <div class="card">
+        <div class="card__icon"><img src="img/ico-return.svg"></div>
+        <strong class="card__title">365 Return Days</strong>
+        <p class="card__text">
+          All-year-around active cookies.
+          <br> We pay for each sale, not just for the first one.
+        </p>
+        <span class="card__link"><a href="#">Read more</a></span>
+      </div>
+
+      <div class="card">
+        <div class="card__icon"><img src="img/ico-commission.svg"></div>
+        <strong class="card__title">Progressive Commission Plan</strong>
+        <p class="card__text">Increase your commission rate up to 50%</p>
+        <span class="card__link"><a href="#">Read more</a></span>
+      </div>
+
+      <div class="card">
+        <div class="card__icon"><img src="img/ico-payment.svg"></div>
+        <strong class="card__title">We Pay Globally and Quickly</strong>
+        <p class="card__text"><img src="img/cards.svg" alt="Payment Cards"></p>
+        <span class="card__link"><a href="#">Read more</a></span>
+      </div>
+
+      <div class="card">
+        <div class="card__icon"><img src="img/ico-recruiting.svg"></div>
+        <strong class="card__title">Get $ for Recruiting Affiliates</strong>
+        <p class="card__text">
+          Your cut is 5% Life-long.
+          <br> Build your own empire just by spreading the world!
+        </p>
+        <span class="card__link"><a href="#">Read more</a></span>
+      </div>
+    </div>
+  </div>
 {% endblock %}
 
 {% block modals %}
 
-  {% include 'partials/_modal-callback.html' %}
-  {% include 'partials/_modal-question.html' %}
+  {% include 'partials/_modal-affiliate.html' %}
 
 {% endblock %}
 
